rewrote the headchef section on BEM, fixed the problem with positioning on chef cards, created an additional module for cards, cropped the picture in the tradition section

--- a/scss/components/_texts.scss
+++ b/scss/components/_texts.scss
@@ -5,6 +5,10 @@
     }
 .h2 {
     @include texts(64px, 900, var(--color-primary-dark), 131%);
+    margin: 0;
+    &--centered {
+        text-align: center;
+    }
 }
 .uperrcase {
     text-transform: uppercase;
