--- a/scss/layouts/_traditional-section.scss
+++ b/scss/layouts/_traditional-section.scss
@@ -2,21 +2,32 @@
 @use "../utils/mixins" as *;
 .traditional-section {
   &__container {
-    @include display(space-between, center, 40px);
+    @include display(space-between, 40px);
   }
 
   &__content {
-    @include display(flex-start, center, 42px);
-    max-width: 710px;
+    display: flex;
     flex-direction: column;
+    gap: 42px;
+    max-width: 710px;
   }
   &__text {
-    @include texts(18px, 400, 150%, var(--color-primary-dark));
+    @include texts(18px, 400, var(--color-primary-dark), 150%);
+    margin-bottom: 0;
   }
   &__span {
     font-weight: 900;
   }
+  &__image-container {
+   width: 393px;
+   height: 466px;
+   border-radius: 200px 200px 0 0;
+   overflow: hidden;
+  }
+  &__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
-.traditional-text.limited {
-  max-width: 340px;
-}
+
